# ysera

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: windows.yml
crates/editor/: Cargo.toml
crates/editor/src/: gui.rs
crates/engine/: Cargo.toml
crates/engine/src/: engine.rs  lib.rs
crates/illuminate/: Cargo.toml  build.rs
crates/illuminate/src/: error.rs  gui.rs  lib.rs
crates/illuminate/src/vulkan/: adapter.rs  buffer.rs  command_buffer_allocator.rs  descriptor_pool.rs  descriptor_set_allocator.rs  descriptor_set_layout.rs  device.rs  image.rs  image_view.rs  imgui.rs  instance.rs  mod.rs  model.rs  pipeline.rs  pipeline_layout.rs  platforms.rs  render_pass.rs  renderer.rs  sampler.rs  shader.rs  swapchain.rs  texture.rs  uniform_buffer.rs
crates/imgui/: Cargo.toml
crates/imgui/src/: controls.rs  gui.rs  lib.rs  theme.rs
crates/math/: Cargo.toml
crates/math/src/: lib.rs  rect.rs  vertex.rs
crates/playground/: Cargo.toml
crates/playground/src/: lib.rs  main.rs
crates/renderer/: Cargo.toml  build.rs
crates/renderer/examples/: sandbox.rs
crates/renderer/src/: lib.rs  shader.rs
crates/renderer/src/passes/: main_camera_pass.rs  mod.rs
crates/rhi/: Cargo.toml  build.rs
crates/rhi/examples/: sandbox.rs  triangle.rs  vulkan_v2.rs
crates/rhi/src/: error.rs  gui.rs  image.rs  lib.rs  types.rs  types_v2.rs  utils.rs
crates/rhi/src/vulkan/: adapter.rs  base_renderer.rs  buffer.rs  command_buffer.rs  command_buffer_allocator.rs  context.rs  conv.rs  debug.rs  descriptor_pool.rs  descriptor_set_allocator.rs  descriptor_set_layout.rs  device.rs  framebuffer.rs  image.rs  image_view.rs  imgui.rs  instance.rs  mod.rs  model.rs  pipeline.rs  pipeline_layout.rs  platforms.rs  render_pass.rs  renderer.rs  sampler.rs  shader.rs  swapchain.rs  sync.rs  texture.rs  uniform_buffer.rs  utils.rs
crates/rhi/src/vulkan_v2/: adapter.rs  buffer.rs  command_buffer_allocator.rs  conv.rs  debug.rs  device.rs  image.rs  instance.rs  mod.rs  physical_device.rs  pipeline.rs  platforms.rs  queue.rs  sampler.rs  semaphore.rs  shader.rs  surface.rs  swapchain.rs  utils.rs
crates/rhi_types/: Cargo.toml
crates/rhi_types/src/: lib.rs
illuminate/: Cargo.toml  build.rs
illuminate/src/: error.rs  lib.rs
illuminate/src/vulkan/: adapter.rs  command_buffer.rs  command_buffer_allocator.rs  conv.rs  debug.rs  device.rs  instance.rs  mod.rs  pipeline.rs  pipeline_layout.rs  platforms.rs  render_pass.rs  renderer.rs  shader.rs  surface.rs  swapchain.rs  texture.rs  texture_view.rs  utils.rs
playground/: Cargo.toml
playground/src/: main.rs
resources/shaders/: shader-base.frag  triangle_0.vert  triangle_1.vert  triangle_push_constant.frag  triangle_push_constant.vert  triangle_uniform.frag  triangle_uniform.vert
