[workspace]
resolver = "2"
members = [
    "crates/illuminate",
    "crates/math",
    "crates/editor",
    "crates/playground",
]

[workspace.package]
edition = "2021"
rust-version = "1.65"

[workspace.dependencies]
math = { package = "eureka-math", path = "crates/math" }
editor = { package = "eureka-editor", path = "crates/editor" }
image = "0.24"
profiling = "=1.0.7"
serde = "1"
winit = "0.27"
raw-window-handle = "0.5"
log = "0.4"
env_logger = "0.10.0"
num = "0.4"
rand = "0.8"
thiserror = "1"
anyhow = "1"
lazy_static = "1"
nalgebra-glm = "0.18"
typed-builder = "0.11"
bitflags = "1"
winapi = "0.3"
windows = "0.44"
fxhash = "0.2"
parking_lot = "0.12"
rayon = "1"
glob = "0.3"
fs_extra = "1"
#ordered-float = "3.4.0"

# model
gltf = "1"
tobj = "3.2"

# Vulkan
ash = "0.37"
naga = "0.11"
gpu-allocator = "0.21"
#vk-mem = { git = "https://github.com/gwihlidal/vk-mem-rs", version = "0.2.3" } # wait for update

#glium = "0.32.1"
imgui = "0.10"
imgui-winit-support = "0.10.0"
imgui-rs-vulkan-renderer = "1.7"
clipboard = "0.5"
