[package]
name = "playground"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
illuminate = { path = "../illuminate" }
fxhash.workspace = true
log.workspace = true
env_logger.workspace = true
winit.workspace = true
raw-window-handle.workspace = true
naga = { workspace = true, features = ["glsl-in"] }

# profiling
profiling = { workspace = true, features = ["profile-with-tracy"] }
