[package]
name = "illuminate"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["vulkan"]
vulkan = ["naga/spv-out", "ash"]

[dependencies]
ash = { workspace = true, default-features = false, features = ["linked", "debug"], optional = true }
math.workspace = true
raw-window-handle.workspace = true
log.workspace = true
num.workspace = true
thiserror.workspace = true
anyhow.workspace = true
profiling.workspace = true
typed-builder.workspace = true
bitflags.workspace = true
winit.workspace = true
fxhash.workspace = true
parking_lot.workspace = true
gpu-allocator.workspace = true
nalgebra-glm.workspace = true
#vk-mem.workspace = true
naga = { workspace = true, features = ["clone"] }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = ["Win32_System_LibraryLoader", "Win32_Foundation"] }
