[package]
name = "ysera_renderer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
rhi.workspace = true
rhi_types.workspace = true
math.workspace = true
log.workspace = true
profiling.workspace = true
typed-builder.workspace = true
parking_lot.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
winit.workspace = true
env_logger.workspace = true
