[package]
name = "ysera_rhi_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags.workspace = true
parking_lot.workspace = true
num-traits.workspace = true
num-derive.workspace = true
typed-builder.workspace = true
log.workspace = true
